==> nobmaste/QH_Learning_Resources/Module/DDS/AD9854/测试程序/STM32版本/AD9854正点原子/AD9854测试程序_正点原子F429/User/use/AD9854.c <==
#include "stm32f429_winner.h"
#include "AD9854.h"
#include "Delay.h"
#define CLK_Set 10

void GPIO_AD9854_Configuration(void)
{ 
	GPIO_InitTypeDef GPIO_Initure;
	__HAL_RCC_GPIOC_CLK_ENABLE();           	// 开启GPIOC时钟
  __HAL_RCC_GPIOB_CLK_ENABLE();           	// 开启GPIOB时钟
	// 使能IO口时钟
  GPIO_Initure.Pin=GPIO_PIN_0 | GPIO_PIN_1| GPIO_PIN_2;	
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  	// 
	GPIO_Initure.Pull=GPIO_PULLUP;          	// 上拉
	GPIO_Initure.Speed=GPIO_SPEED_FREQ_HIGH;  // 高速
	HAL_GPIO_Init(GPIOB,&GPIO_Initure);				// 初始化

	// 控制端口
	GPIO_Initure.Pin=GPIO_PIN_8  | GPIO_PIN_9  |	GPIO_PIN_10 | GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13 ;	
	GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  	//
	GPIO_Initure.Pull=GPIO_PULLUP;          	// 上拉
	GPIO_Initure.Speed=GPIO_SPEED_FREQ_HIGH;  // 高速
	HAL_GPIO_Init(GPIOC,&GPIO_Initure);				// 初始化
}

void AD9854_WR_Byte(u8 Adata)
{
	unsigned char  i;
	
	for(i=8;i>0;i--)
	{
		if(Adata&0x80)						
			SPI_SDI_Set;
		else
			SPI_SDI_Clr;
		Adata <<= 1;
    delay_us(50);		
		AD9854_WR_Clr;
		AD9854_WR_Set;
	}
}

void AD9854_Init(void)
{
	AD9854_SP_Clr;								 // 串行控制
	AD9854_WR_Clr;
	AD9854_UDCLK_Clr;
	AD9854_RST_Set;                // 复位AD9854
	delay_us(100);
	AD9854_RST_Clr;
	SPI_IO_RST_Clr;
	AD9854_RD_Clr;
	
  AD9854_WR_Byte(CONTR);
// 	AD9854_WR_Byte(0x10);							//关闭比较器
	AD9854_WR_Byte(0x00);							//打开比较器

	AD9854_WR_Byte(CLK_Set);					//设置系统时钟倍频       
	AD9854_WR_Byte(0x00);							//设置系统为模式0，由外部更新
	AD9854_WR_Byte(0x60);	

	AD9854_UDCLK_Set;              // 更新AD9854输出
	AD9854_UDCLK_Clr;	
}
