==> nobmaste/QH_Learning_Resources/Module/DDS/AD9854/测试程序/STM32版本/STM32F103/STM32_AD9854测试程序_V2.1/User/AD9854.c <==
#include <stm32f10x.h>
#include "AD9854.h"
#include "Delay.h"
#include "tim3.h"
 #define CLK_Set 0x4A

void GPIO_AD9854_Configuration(void)
{ 
	GPIO_InitTypeDef GPIO_InitStructure;

	// 使能IO口时钟
	RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOA | RCC_APB2Periph_GPIOC |
							RCC_APB2Periph_GPIOB, ENABLE);   
	// 地址端口
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 |	GPIO_Pin_2 | GPIO_Pin_3 
								| GPIO_Pin_4 | GPIO_Pin_5 ; 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;;		// 推挽输出
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	// 数据端口
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8 | GPIO_Pin_9 |	GPIO_Pin_10 | GPIO_Pin_11 
								| GPIO_Pin_12 | GPIO_Pin_13 |	GPIO_Pin_14 | GPIO_Pin_15; 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;;		// 推挽输出
	GPIO_Init(GPIOB, &GPIO_InitStructure); 
	// 控制端口
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8  | GPIO_Pin_9  |	GPIO_Pin_10 | GPIO_Pin_11 
								| GPIO_Pin_12 | GPIO_Pin_13 |	GPIO_Pin_14; 
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;;		// 推挽输出
	GPIO_Init(GPIOC, &GPIO_InitStructure);

//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4; 
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;;		// 推挽输出
//	GPIO_Init(GPIOE, &GPIO_InitStructure);
	
}

void AD9854_WR_Byte(u8 addr,u8 dat)
{
	u16 Tmp;
	
	Tmp =  GPIO_ReadOutputData(GPIOA);
	GPIO_Write(GPIOA, (u16)(addr&0x3f) | (Tmp & 0xFFC0));		// ADDER  	
	Tmp =  GPIO_ReadOutputData(GPIOB);
 	GPIO_Write(GPIOB, (u16)(dat<<8) | (Tmp & 0x00FF));		  // DATA
	AD9854_WR_Clr;
	AD9854_WR_Set;
}

void AD9854_Init(void)
{
	AD9854_WR_Set;                 // 将读、写控制端口设为无效
	AD9854_RD_Set;
	AD9854_SP_Set;

//	AD9854_UDCLK_Clr;
//// 	AD9854_RST_Set;                // 复位AD9854
	AD9854_RST_Clr;
	Delay_10us (10);
	AD9854_RST_Set;
	Delay_10us (10);
	AD9854_RST_Clr;

 	AD9854_WR_Byte(0x1d,0x00);	 	 // 开启比较器, 开启后才可以输出方波
//	AD9854_WR_Byte(0x1d,0x10);	 // 关闭比较器
	AD9854_WR_Byte(0x1e,CLK_Set);	 // 设置系统时钟倍频            
	AD9854_WR_Byte(0x1f,0x01);	   // 设置系统为模式0，由内部更新
	AD9854_WR_Byte(0x20,0x60);	   // 设置为可调节幅度，取消插值补偿,关闭Sinc效应


}
